# CRI-CORE

./: .gitignore  Architecture.md  CHANGELOG.md  CITATION.cff  CRI-CORE-ENFORCEMENT-CONTRACT.md  LICENSE  LICENSE-ENTERPRISE.md  README.md  __init__.py  citation.cff  cli.py  pyproject.toml
.github/workflows/: cri-smoke.yml  doc-guard.yml
archive/: .gitignore  __init__.py  cli.py
archive/cri/: __init__.py  cli.py
archive/docs/: AWO_ORIGIN.md  RUNTIME_OVERVIEW.md
archive/schemas/: run_manifest.schema.json
archive/templates/gates/: merge_checklist.md  scope_checklist.md
archive/workflows/: minimal.json
docs/: CRI_SPEC.md  ENFORCEMENT_STAGE_ORDER.md  KERNEL_INVARIANTS.md  RUNTIME_OVERVIEW.md  RUN_CONTEXT_CONTRACT.md  canonical_proposal_object.md  compiled_contract_interface.md
docs/adr/: ADR-001-MultiRole-Independence-and-Binding.md
schema/: contract.schema.json  proposal.schema.json
schemas/: workflow.schema.json
src/cricore/: __init__.py  api.py  errors.py  loader.py
src/cricore/api/: __init__.py  evaluate.py
src/cricore/contract/: compiled_loader.py  errors.py  loader.py  model.py
src/cricore/enforcement/: execution.py  independence.py  integrity.py  lifecycle.py  publication.py  repository_integrity.py  stage_ids.py
src/cricore/integrity/: binding.py  finalize.py  manifest.py  payload.py  repository.py  seal.py
src/cricore/interface/: __init__.py  evaluate_core.py  evaluate_proposal.py  governed_execute.py
src/cricore/proposal/: validator.py
src/cricore/results/: model.py  stage.py
src/cricore/run/: paths.py  structure.py
tests/: test_boundary_invariants.py  test_evaluate_structured.py
tests/enforcement/: test_contract_hash_gate.py  test_independence_override.py  test_independence_stage.py  test_integrity_seal_enforcement.py  test_integrity_stage.py  test_integrity_stage_finalize.py  test_pipeline_execution.py  test_publication_commit_gate.py  test_publication_stage.py  test_publication_stage_failures.py
tests/fixtures/contracts/invalid/: bad-version.invalid.json  empty-authority.invalid.json  extra-top-level-field.invalid.json
tests/fixtures/contracts/valid/: lifecycle.valid.json  minimal.valid.json
tests/fixtures/minimal_run_missing_report/runs/TEST-RUN-002/: contract.json
tests/fixtures/minimal_run_v0_1_0/runs/TEST-RUN-001/: contract.json  randomness.json  report.md
tests/fixtures/minimal_run_v0_2_0/runs/TEST-RUN-003/: SHA256SUMS.txt  approval.json  claim.json  contract.json
tests/fixtures/minimal_run_v0_2_0/runs/TEST-RUN-003/validation/: invariant_results.json
tests/fixtures/minimal_run_v0_3_0/runs/TEST-RUN-003/: claim.json
tests/fixtures/proposals/invalid/: bad-timestamp.invalid.json  missing-proposal-id.invalid.json  missing-requested-mutation.invalid.json
tests/fixtures/proposals/valid/: lifecycle.valid.json  minimal.valid.json
tests/integrity/: test_finalize_writer.py  test_repository_integrity.py
tests/legacy/: conftest.py
tests/legacy/contract/: test_compiled_contract_loader.py
tests/legacy/enforcement/: test_integrity_binding_enforcement.py  test_integrity_stage_failures.py  test_publication_commit_gate.py
tests/legacy/fixtures/contracts/invalid/: invalid-transition.invalid.json
tests/legacy/fixtures/minimal_run_missing_report/runs/TEST-RUN-002/: SHA256SUMS.txt  approval.json  randomness.json
tests/legacy/fixtures/proposals/invalid/: bad-contract-version.invalid.json  bad-sha256.invalid.json  bad-timestamp.invalid.json  empty-artifacts.invalid.json  extra-actor-field.invalid.json  extra-top-level-field.invalid.json
tests/legacy/integrity/: test_finalize_writer.py  test_manifest_builder.py  test_payload_builder.py
tests/legacy/manual/: test_governed_execute.py
tests/legacy/run/: test_proposal_schema_validation.py  test_structure_contract.py  test_structure_contract_failures.py
tests/legacy/test-run/: SEAL.json  SHA256SUMS.txt  approval.json  binding.json  claim.json  contract.json  proposal.json
tests/legacy/tmp_run/: SEAL.json  SHA256SUMS.txt  approval.json  binding.json  claim.json  compiled_contract.json  contract.json
tests/manual/: test_evaluate.py
tests/run/: test_contract_schema_validation.py  test_proposal_schema_validation.py  test_structure_contract_version_gate.py
tools/: doc_guard.py
workflows/: cri-validate.yml  minimal.json  release-dry-run.yml  release.yml
(+11 files in other folders)
