[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricore"
version = "0.6.0"
description = "CRI-CORE — Deterministic structural enforcement kernel for governed state transitions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://waveframelabs.org"
Source = "https://github.com/Waveframe-Labs/CRI-CORE"
Issues = "https://github.com/Waveframe-Labs/CRI-CORE/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]