[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricore"
version = "0.13.0"
description = "CRI-CORE — Deterministic enforcement kernel for controlling whether system actions are allowed to execute."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
]

keywords = [
    "governance",
    "enforcement",
    "deterministic",
    "reproducibility",
    "separation-of-duties",
    "ai-governance",
    "execution-control",
    "commit-gating",
    "policy-enforcement"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jsonschema>=4"
]

[project.urls]
Homepage = "https://waveframelabs.org"
Source = "https://github.com/Waveframe-Labs/CRI-CORE"
Issues = "https://github.com/Waveframe-Labs/CRI-CORE/issues"
Documentation = "https://waveframelabs.org/tools.html"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cricore" = ["schema/*.json"]